# OCR_Project

./: #test.c#  .gitignore  AUTHORS.md  Backprop.c  Backprop.h  Biblio  CMakeLists.txt  GUI-OCR-SC  Image-Process.c  Image-Process.h  Interface.glade~  Layer.c  Layer.h  Load_Image.c  Load_Image.h  Makefile  Makefile_UI  Network.c  Network.h  NetworkManager  Node.c  Node.h  OCR  OCR_Graphical_UI  OCR_Image_Process  README.md  Repartition  ResourceManager  SaveAndLoad.c  SaveAndLoad.h  Segmentation.c  Segmentation.h  SingleCharOCR  Trainer.c  Trainer.h  Transition.c  Transition.h  UI.c  UI.h  main.c  (+7 more)
Resource/: _config.txt
Saves/: Bouee_x784_10L.txt  Bouee_x784_4L.txt  Clairiere_x784_3L.txt  Foret_x784_3L.txt  Foret_x784_3L_bis.txt  Plage_x784_3L.txt  Plage_x784_3L_bis.txt  Terre_x784_3L.txt
Segmentation/: Makefile  Segmentation.c
Shell/: autoconfig.sh  fix.sh
Sources/ImageProces/: Segmentation.h
Sources/ImageProcess/: Load_Image.c  Load_Image.h  Segmentation.c  Segmentation.h  mainSegmentation.c  mainSegmentation.h
Sources/Interface/: BetterManager.c  Evaluation.c  Evaluation.h  Loader.c  Loader.h  ResourceManager.c  SingleCharOCR.c  Toolbox_SDL.c  Toolbox_SDL.h  TrainingChar_Examples.h  TrainingResource.c  TrainingResource.h  main.c  mainTests.c
Sources/NeuralNetwork/: Backprop.c  Layer.c  Network.c  Network.h  NetworkManager.c  SaveAndLoad.c  SaveAndLoad.h  Trainer.c  Trainer.h  Transition.c  Transition.h
Sources/UserInterface/: GUI-SingleCharOCR.c  OCR-SC.c  OCR.c  UI.c  UI.h  mainUI.c  main_UI.c  test.c  test_UI  test_UI.c
UI/: Makefile  UI.h  main_UI.c  test.c  test2.c
XOR_Save_Load/: Node.c
